# HELM

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run-helm-rust.bat
cli/: client.py  config.py  main.py  scripts.py  stacks.py  stream.py
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/api/: client.ts  types.ts
client/src/components/: GlobalMetrics.tsx  Layout.tsx  LogViewer.tsx  MetricsPanel.tsx  PanelColorPicker.tsx  ServiceCard.tsx  SidebarContext.tsx  Sparkline.tsx  StackCard.tsx  StatusBadge.tsx  TagsDropdown.tsx  UpdateNotice.tsx
client/src/components/modals/: AutomationModal.tsx  CronBuilder.tsx  FormField.tsx  KeyValueEditor.tsx  Modal.tsx  ScriptLogsModal.tsx  ScriptModal.tsx  ServiceModal.tsx  SplitModal.tsx  StackModal.tsx
client/src/hooks/: useLogStream.ts  useStatusStream.ts
client/src/pages/: Agents.tsx  Dashboard.tsx  Diagnostics.tsx  FAQ.tsx  Scripts.tsx  ServiceDetail.tsx  Settings.tsx  StackDetail.tsx
client/src/store/: prefs.ts  scripts.ts  services.ts  stacks.ts  theme.ts
faq/: 01-getting-started.md  02-services.md  03-scripts.md  04-logs-and-status.md  05-scheduling.md  06-settings-and-theme.md  07-backup-and-restore.md  08-troubleshooting.md  index.json
helm-rs/: .gitignore  Cargo.toml
helm-rs/crates/helm-api/: Cargo.toml
helm-rs/crates/helm-api/src/: error.rs  lib.rs  state.rs
helm-rs/crates/helm-api/src/middleware/: pin.rs
helm-rs/crates/helm-api/src/routers/: diagnostics.rs  faq.rs  mod.rs  scripts.rs  services.rs  settings.rs  stacks.rs  system.rs  themes.rs  update.rs  ws.rs
helm-rs/crates/helm-api/tests/: auth_restart.rs  rust_runtime.rs  themes_cards.rs  ws.rs
helm-rs/crates/helm-bin/: Cargo.toml
helm-rs/crates/helm-bin/src/: main.rs
helm-rs/crates/helm-bin/tests/: crud_roundtrip.rs  restart.rs
helm-rs/crates/helm-core/: Cargo.toml
helm-rs/crates/helm-core/src/: error.rs  lib.rs  models.rs
helm-rs/crates/helm-db/: Cargo.toml
helm-rs/crates/helm-db/migrations/: 0001_init.sql  0002_service_venv_path.sql  0003_service_depends_on.sql  0004_service_webhook_url.sql  0005_script_cron_schedule.sql  0006_script_cron_enabled.sql  0007_script_run_mode.sql  0008_service_manifest_path.sql  0009_service_binary_path.sql  0010_service_cargo_profile.sql  0011_service_cargo_features.sql  0012_service_prebuild.sql  0014_service_sort_order.sql  0015_stacks.sql  0016_service_stack_id.sql  0017_service_card_color.sql  0018_stack_card_color.sql
helm-rs/crates/helm-db/src/: lib.rs  migrations.rs
helm-rs/crates/helm-db/src/repo/: mod.rs  output_logs.rs  run_logs.rs  scripts.rs  services.rs  stacks.rs
helm-rs/crates/helm-db/tests/: migrations.rs
helm-rs/crates/helm-platform/: Cargo.toml
helm-rs/crates/helm-platform/src/: lib.rs
helm-rs/crates/helm-platform/tests/: python_parity.rs
helm-rs/crates/helm-proc/: Cargo.toml
helm-rs/crates/helm-proc/src/: health.rs  host.rs  job.rs  lib.rs  log_buffer.rs  metrics.rs  process.rs  retention.rs  scheduler.rs  status.rs
helm-rs/crates/helm-proc/tests/: periodic.rs  process_manager.rs
install/: helm.service  install-arch.sh  install-linux.sh  install-windows.bat
scripts/: cuddlypi_openclaw.py  cuddlypi_ssh.py
tests/fixtures/: build_commands.json  schema.sql
tests/fixtures/rest/: export.json  faq_list.json  health.json  script_404.json  script_create.json  script_delete.json  scripts_list.json  service_404.json  service_create.json  service_delete.json  service_get.json  service_logs.json  service_metrics.json  service_update.json  services_list.json  system_info.json
tests/fixtures/rust-app/: Cargo.toml
tests/fixtures/rust-app/src/: main.rs
tests/fixtures/ws/: logs_sample.json  status_sample.json
themes/: abyss.json  daylight.json  ember.json  helm-dark.json  vapor.json
tools/: capture_fixtures.py  dump_build_commands.py
