[project]
name = "helmctl"
version = "0.2.0"
description = "CLI client for HELM service dashboard"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13",
    "websockets>=12",
]

[project.scripts]
helmctl = "cli.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*"]
