[workspace]
members = [
    "crates/helm-core",
    "crates/helm-db",
    "crates/helm-platform",
    "crates/helm-proc",
    "crates/helm-api",
    "crates/helm-bin",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# async
tokio = { version = "1", features = ["full"] }

# web
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# db
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono", "json", "migrate"] }

# config
figment = { version = "0.10", features = ["env", "toml"] }
dotenvy = "0.15"

# http client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# process / platform
which = "6"

# metrics
sysinfo = "0.30"

# cron
tokio-cron-scheduler = "0.10"

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# concurrency
dashmap = "5"
parking_lot = "0.12"

# error
thiserror = "1"
anyhow = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
