[package]
name = "helm-api"
version = "0.1.0"
edition = "2021"

[dependencies]
helm-core = { path = "../helm-core" }
helm-db = { path = "../helm-db" }
helm-platform = { path = "../helm-platform" }
helm-proc = { path = "../helm-proc" }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
once_cell = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"
tokio-tungstenite = "0.24"
futures-util = "0.3"
reqwest = { workspace = true }
