[package]
name = "helm-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
helm-core = { path = "../helm-core" }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
regex = "1"
