[package]
name = "helm-platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
helm-core = { path = "../helm-core" }
which = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
shlex = "1"
once_cell = "1"
anyhow = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Threading", "Win32_Foundation"] }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
