[package]
name = "helm-proc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
helm-core = { path = "../helm-core" }
helm-db = { path = "../helm-db" }
helm-platform = { path = "../helm-platform" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
sysinfo = { workspace = true }
reqwest = { workspace = true }
tokio-cron-scheduler = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sqlx = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_Foundation",
    "Win32_Security",
] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
httpmock = "0.7"
sqlx = { workspace = true }
